fix: scrollbar style (#966)
* fix: scrollbar css

* fix: scrollbar css

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -8,6 +8,17 @@
     font-size: 1rem;
 } */
 
+::-webkit-scrollbar {
+    width: 7px;
+}
+::-webkit-scrollbar-track {
+    background: #fafafa;
+}
+::-webkit-scrollbar-thumb {
+    background: #d1d1d1;
+    border-radius: 3px;
+}
+
 .eventReportsApp {
     height: 100%;
     background-color: #f4f6f8;
